[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "attrs>=26.1.0",
    "fbchat-v2>=2.1.5",
    "google-genai>=2.10.0",
    "paho-mqtt>=2.1.0",
    "pillow>=12.2.0",
    "pyotp>=2.10.0",
    "qrcode>=8.2",
    "requests>=2.34.2",
]
